Updates database configuration ⚙

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "RedditCloneDatabaseSettings": {
     "PostsCollectionName": "Posts",
+    "UsersCollectionName": "Users",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RedditCloneDb"
   },
