--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,9 @@
   },
   "RedditCloneDatabaseSettings": {
     "PostsCollectionName": "Posts",
+    "CommentsCollectionName": "Comments",
     "UsersCollectionName": "Users",
+    "VotesCollectionName": "Votes",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RedditCloneDb"
   },
